--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="src/main.ts"></script>
+    <script type="module" src="app"></script>
   </head>
-  <body>
-    hello world!!
-  </body>
 </html>
