thin integration to github

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
   <head>
     <script type="module" src="app"></script>
+    <link rel="stylesheet" href="style/index.css">
   </head>
 </html>
