--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head>
     <script type="module" src="app"></script>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 </html>
